src/objects/FAU_Sponsor__c.object
<CustomObject>
    <fields>
        <fullName>FAU_Participant_Chatter_Group_Id__c</fullName>
        <formula>PII__r.FAU_PII_Chatter_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Chatter Group Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Program__c</fullName>
        <label>Program</label>
        <referenceTo>FAU_Program__c</referenceTo>
        <relationshipLabel>Sponsors</relationshipLabel>
        <relationshipName>Sponsors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PII_Chatter_Group__c</fullName>
        <formula>PII__r.FAU_PII_Chatter_Group_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PII Chatter Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PII__c</fullName>
        <label>PII</label>
        <referenceTo>FAU_PII__c</referenceTo>
        <relationshipLabel>Sponsors</relationshipLabel>
        <relationshipName>Sponsors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sponsors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sponsor</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Sponsor No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>